# ext-libra

./: .gitignore  CMakeLists.txt  LICENSE  README.md  config.m4  libra.cpp  libra_animate.cpp  libra_animate.h  libra_container.cpp  libra_container.h  libra_image.cpp  libra_image.h  libra_interface.cpp  libra_interface.h  libra_kaleido.cpp  libra_kaleido.h  libra_logger.cpp  libra_logger.h  libra_roller.cpp  libra_roller.h  libra_sequence.cpp  libra_sequence.h  libra_webp.cpp  libra_webp.h  library.h  php_libra.h
src/: AbstractLogger.cpp  AbstractLogger.h  Animate.cpp  Animate.h  Base.cpp  Base.h  Container.cpp  Container.h  ILogger.h  Image.cpp  Image.h  Kaleido.cpp  Kaleido.h  LibraErrno.h  Logger.cpp  Logger.h  LoggerInterface.cpp  LoggerInterface.h  Mux.cpp  Mux.h  NullLogger.cpp  NullLogger.h  Roller.cpp  Roller.h  Sequence.cpp  Sequence.h  Utils.cpp  Utils.h  WebpAnim.cpp  WebpAnim.h
